--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "expo": "~52.0.37",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.7"
+    "react-native": "0.76.7",
+    "react-native-feather": "^1.1.2",
+    "react-native-size-matters": "^0.4.2",
+    "react-native-svg": "15.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
