--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "react-native": "0.76.7",
     "react-native-feather": "^1.1.2",
     "react-native-size-matters": "^0.4.2",
-    "react-native-svg": "15.8.0"
+    "react-native-svg": "15.8.0",
+    "react-dom": "18.3.1",
+    "react-native-web": "~0.19.13",
+    "@expo/metro-runtime": "~4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
